# dialect-map-core

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: database.md  development.md  models.md
scripts/: start_flask.sh
src/: __init__.py  commands.py  globals.py  main.py  service.py
src/controllers/: __init__.py  base.py  category_ctl.py  ctl_category.py  ctl_jargon.py  ctl_membership.py  ctl_paper.py  ctl_reference.py  jargon_ctl.py  membership_ctl.py  paper_ctl.py  reference_ctl.py
src/dialect_map/: __init__.py  cli.py
src/dialect_map/controllers/: __init__.py  base.py  ctl_category.py  ctl_jargon.py  ctl_membership.py  ctl_metrics.py  ctl_paper.py  ctl_reference.py
src/dialect_map/encoding/: base.py  json.py
src/dialect_map/models/: __init__.py  __utils.py  base.py  category.py  jargon.py  membership.py  metrics.py  paper.py  reference.py
src/dialect_map/parsers/: date.py  datetime.py
src/dialect_map/service/: __init__.py  service.py
src/dialect_map/storage/: __init__.py  context.py  database.py  loader.py
src/dialect_map_core/: __init__.py  cli.py
src/dialect_map_core/controllers/: __init__.py  base.py  ctl_category.py  ctl_jargon.py  ctl_metrics.py  ctl_paper.py
src/dialect_map_core/encoding/: __init__.py  base.py  json.py
src/dialect_map_core/models/: __init__.py  __utils.py  base.py  category.py  jargon.py  membership.py  metrics.py  paper.py  reference.py
src/dialect_map_core/storage/: __init__.py  __utils.py  database.py  loader.py
src/dialect_map_data/: __init__.py  mapping.py
src/dialect_map_data/files/: test_category.json  test_jargon.json  test_jargon_group.json  test_jargon_paper_metrics.json  test_metrics_jargon_cat.json  test_paper.json  test_paper_author.json  test_paper_ref.json
src/models/: __init__.py  base.py  category.py  jargon.py  membership.py  paper.py  reference.py
src/parsers/: __init__.py  base.py  date.py  datetime.py
src/routes/: __init__.py  category_routes.py  reference_routes.py  routes_category.py  routes_jargon.py  routes_membership.py  routes_metrics.py  routes_paper.py  routes_reference.py
src/service/: service.py
src/storage/: __init__.py  database.py  loader.py
tests/: test_cli.py  test_dummy.py  utils.py
tests/.files/: test_jargon_paper_metrics.json  test_membership.json  test_paper.json  test_paper_author.json  test_paper_ref_counters.json
tests/config/: test_loaders.py
tests/controllers/: conftest.py  test_category_ctl.py  test_jargon_ctl.py  test_membership_ctl.py  test_metrics_ctl.py  test_paper_ctl.py  test_reference_ctl.py
tests/encoding/: test_json_decoding.py  test_json_encoding.py
tests/parsers/: test_date.py  test_datetime.py
tests/storage/: conftest.py  test_context.py  test_database.py
