[project]
name = "dialect-map-core"
description = "Package containing the core models of the Dialect map"
requires-python = ">=3.11"
dynamic = ["version", "readme"]
license = { file = "LICENSE" }
authors = [{ name = "NYU DS3 Team", email = "ds3@nyu.edu" }]
maintainers = [{ name = "Sinclert Perez", email = "sinclert@hotmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click==8.1.7",
    "psycopg2-binary==2.9.5",
    "sqlalchemy==2.0.21",
]

[project.optional-dependencies]
lint = [
    "black==23.11.0",
    "isort==5.13.2",
    "mypy==1.6.1",
]
test = [
    "pytest==7.2.0",
    "pytest-cov==4.0.0",
]
all = [
    "dialect-map-core[lint]",
    "dialect-map-core[test]",
    "pre-commit==3.6.2",
]

[project.urls]
Homepage = "https://github.com/dialect-map/dialect-map"
Source = "https://github.com/dialect-map/dialect-map-core"
Changelog = "https://github.com/dialect-map/dialect-map-core/blob/main/CHANGELOG.md"

[project.scripts]
dm-admin = "dialect_map_core.cli:main"


# Section with setuptools configuration options
[tool.setuptools.dynamic]
readme = { file = "README.md" }
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dialect_map_data = [
    "data/*.json",
    "files/*.json",
]


# Section with black configuration options
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


# Section with isort configuration options
[tool.isort]
force_single_line = true
ignore_whitespace = true
only_sections = true
profile = "black"


# Section with mypy configuration options
[tool.mypy]
cache_dir = "/dev/null"
allow_redefinition = true
explicit_package_bases = true
ignore_missing_imports = true
