[metadata]
name = dialect-map-core
version = file: VERSION
description = Package containing the core models of the Dialect map
url = https://github.com/dialect-map/dialect-map-core
author = NYU DS3 Team
author_email = sinclert@hotmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10, <4.0
install_requires =
    click==8.1.3
    psycopg2-binary==2.9.5
    sqlalchemy==2.0.0

[options.packages.find]
where = src

[options.package_data]
* =
    data/*.json
    files/*.json

[options.extras_require]
lint =
    black==22.12.0
    isort==5.11.3
    mypy==0.990
test =
    pytest==7.2.0
    pytest-cov==4.0.0
all =
    dialect-map-core[lint]
    dialect-map-core[test]
    pre-commit==2.20.0

[options.entry_points]
console_scripts =
    dm-admin = dialect_map_core.cli:main
